styles for validation

--- a/app/index.html
+++ b/app/index.html
@@ -53,11 +53,17 @@
                                 <div class="steps_form_item active">
                                     <div class="form_group">
                                         <div class="input_block">
-                                            <input type="text" placeholder="Enter you sum">
+                                            <input class="input_validation" type="text" placeholder="Enter you sum" required>
+                                            <div class="invalid-feedback">
+                                                This field is required and must be only a number
+                                            </div>
                                         </div>
 
                                         <div class="input_block">
-                                            <input type="text" placeholder="Enter date">
+                                            <input class="input_validation" type="text" placeholder="Enter date" required>
+                                            <div class="invalid-feedback">
+                                                This field is required and must be only a number
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
