add processing url hash

--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
             </h1>
 
             <div class="form_wrapper">
-                <ol class="steps_progress_bar">
+                <ol class="steps_progress_bar" id="steps_progress_bar">
                     <li class="steps_progress_bar_item active">
                         <span class="step_number">
                           1
@@ -58,7 +58,7 @@
                 </ol>
 
                 <div class="steps_form_container">
-                    <form id="form" action="" onsubmit="controllerBase.onSubmitForm()" method="post">
+                    <form id="form" action="" method="post">
                         <div class="steps_form_stage-outer">
                             <div class="steps_form_stage">
                                 <div class="steps_form_item active">
